Deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: byne-app
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testbyne-deployment
  namespace: byne-app
  labels:
    app: testbyne
    branchName: testbyne
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testbyne
      branchName: testbyne
  template:
    metadata:
      labels:
        app: testbyne
        branchName: testbyne
    spec:
      volumes:
        - name: rabbit-data
          emptyDir: {}
        - name: mongo-data
          emptyDir: {}
      containers:
        - name: rabbit
          image: rabbitmq:3-management
          volumeMounts:
            - name: rabbit-data
              mountPath: /usr/src
          ports:
            - containerPort: 15672
            - containerPort: 5672
        - name: mongo
          image: mongo
          volumeMounts:
            - name: mongo-data
              mountPath: /usr/src
          ports:
            - containerPort: 27017
        - name: mongo-express
          image: mongo-express
            
          ports:
            - containerPort: 8081
        - name: even-service
          image: vitimm144/evenservice
          ports:
            - containerPort: 5000
        - name: odd-service
          image: vitimm144/oddservice
          ports:
            - containerPort: 5001
        - name: multiply-service
          image: vitimm144/multiplyservice
        - name: multiply-api
          image: vitimm144/multiplyapi
          ports:
            - containerPort: 8000
            - containerPort: 8001
            - containerPort: 8002
        - name: client-vue
          image: vitimm144/clientvue
          ports:
            - containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  name: multiply-api
  namespace: byne-app
spec:
  type: NodePort
  selector:
    app: testbyne
  ports:
    - protocol: TCP
      name: multiply-api
      port: 8000
      targetPort: 8000
      port: 8001
      targetPort: 8001
      port: 8002
      targetPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: byne-app
spec:
  type: NodePort
  selector:
    app: testbyne
  ports:
    - protocol: TCP
      name: mongo
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: byne-app
spec:
  type: NodePort
  selector:
    app: testbyne
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 80
    - protocol: TCP
      name: mongo-express
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: client-vue
  namespace: byne-app
spec:
  type: NodePort
  selector:
    app: testbyne
  ports:
    - protocol: TCP
      name: client-vue
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit
  namespace: byne-app
spec:
  type: NodePort
  selector:
    app: testbyne
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: rabbit
      port: 15672
      targetPort: 15672
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: even-service
  namespace: byne-app
spec:
  type: NodePort
  selector:
    app: testbyne
  ports:
    - protocol: TCP
      name: even-service
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: odd-service
  namespace: byne-app
spec:
  type: NodePort
  selector:
    app: testbyne
  ports:
    - protocol: TCP
      name: odd-service
      port: 5001
      targetPort: 5001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: byne-ingress
  namespace: byne-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-vue
                port:
                  number: 80
          - path: /rabbit
            pathType: Prefix
            backend:
              service:
                name: rabbit
                port:
                  number: 15672
          - path: /mongo-express
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
